--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,8 @@
 dnl init
 dnl AC_REVISION($Revision: 1.30 $)
 AC_PREREQ([2.60])
-AC_INIT([chan_dongle],[1.1],[https://github.com/bg111/asterisk-chan-dongle/issues],[chan_dongle],[https://github.com/bg111/asterisk-chan-dongle/])
-PACKAGE_REVISION="43gh=47cg"
+AC_INIT([chan_dongle],[1.1],[http://code.google.com/p/asterisk-chan-dongle/issues/list],[chan_dongle],[http://code.google.com/p/asterisk-chan-dongle])
+PACKAGE_REVISION="35"
 AC_CANONICAL_TARGET
 AM_INIT_AUTOMAKE
 AC_CONFIG_HEADERS([config.h])
