--- a/configure.in
+++ b/configure.in
@@ -7,6 +7,7 @@ AC_CANONICAL_TARGET
 AM_INIT_AUTOMAKE
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_SRCDIR([chan_dongle.c])
+AC_CONFIG_FILES([stamp-h], [echo timestamp > stamp-h])
 AC_CANONICAL_SYSTEM
 AC_CANONICAL_HOST
 
@@ -30,7 +31,8 @@ AC_ARG_WITH(
 	[ if ! test "$((with_astversion + 0))" -eq "$with_astversion" ; then AC_MSG_ERROR([Invalid --with-astversion=MMmmuu value]); fi ],
 	[ AC_MSG_ERROR([Please set --with-astversion=MMmmuu (major.minor.micro)]) ]
 )
-CPPFLAGS="$CPPFLAGS -DASTERISK_VERSION_NUM=$with_astversion"
+AC_DEFINE_UNQUOTED([ASTERISK_VERSION_NUM], [$with_astversion],
+		   [The Asterisk version as configured --with-astversion.])
 
 AC_ARG_ENABLE(
 	[debug], 
