Clarify --with-astversion parameter in ./configure.
As suggested by @arekm. Note that "010813" does not work, as gcc will treat
it as base 8.

--- a/configure.in
+++ b/configure.in
@@ -27,9 +27,9 @@ AC_ARG_WITH(
 dnl  Required: asterisk version
 AC_ARG_WITH(
 	[astversion],
-	AS_HELP_STRING([--with-astversion=MMmmuu], [set asterisk version to 10813 for version 1.8.13]),
-	[ if ! test "$((with_astversion + 0))" -eq "$with_astversion" ; then AC_MSG_ERROR([Invalid --with-astversion=MMmmuu value]); fi ],
-	[ AC_MSG_ERROR([Please set --with-astversion=MMmmuu (major.minor.micro)]) ]
+	AS_HELP_STRING([--with-astversion=Mmmuu], [set asterisk version; examples: 1.8.13 => 10813, 11.1.2 => 110102]),
+	[ if ! test "$((with_astversion + 0))" -eq "$with_astversion" ; then AC_MSG_ERROR([Invalid --with-astversion=Mmmuu value]); fi ],
+	[ AC_MSG_ERROR([Please set --with-astversion=Mmmuu (major.minor.micro)]) ]
 )
 AC_DEFINE_UNQUOTED([ASTERISK_VERSION_NUM], [$with_astversion],
 		   [The Asterisk version as configured --with-astversion.])
