Build fix for Asterisk 12.

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
 before_script:
   - aclocal
   - autoconf
-  - automake -a || true
+  - automake -a || true  # do install stuff, don't create makefile
   - ASTVERINT=$(echo $ASTVER | sed -e 's/^[^.]*$/&.0/;s/\./0/')00
   - ./configure --with-astversion=$ASTVERINT --with-asterisk=./asterisk-$ASTVER/include
 
