--- a/Makefile.in
+++ b/Makefile.in
@@ -26,7 +26,7 @@ HEADERS = app.h at_command.h at_parse.h at_queue.h at_read.h at_response.h \
 tools_HEADERS = tools/tty.h
 
 EXTRA_DIST = BUGS COPYRIGHT.txt LICENSE.txt README.txt TODO.txt INSTALL \
-	Makefile.in config.h.in configure.in stamp-h.in etc contrib
+	Makefile.in config.h.in configure.ac stamp-h.in etc contrib
 
 BUILD_TOOLS = configure config.sub install-sh missing config.guess
 
@@ -81,6 +81,11 @@ tools/discovery: $(discovery_OBJS)
 clean:
 	$(RM) $(PROJM) $(PROJS) *.o *.core .*.d autom4te.cache test/test1 test/*.o tools/discovery test/*.o
 
+distclean: clean
+	$(RM) Makefile aclocal.m4 compile \
+		config.guess config.h config.log config.status config.sub \
+		configure install-sh missing stamp-h stamp-h1
+
 dist: $(SOURCES) $(HEADERS) $(EXTRA_DIST) $(BUILD_TOOLS)
 	@mkdir $(DISTNAME) $(DISTNAME)/test $(DISTNAME)/tools
 	@cp -a $(SOURCES) $(HEADERS) $(EXTRA_DIST) $(BUILD_TOOLS) $(DISTNAME)
@@ -89,7 +94,7 @@ dist: $(SOURCES) $(HEADERS) $(EXTRA_DIST) $(BUILD_TOOLS)
 	tar czf $(DISTNAME).tgz $(DISTNAME) --exclude .svn -h
 	@$(RM) $(DISTNAME)
 
-configure: configure.in
+configure: configure.ac
 	autoconf
 
 config.h: stamp-h
