pdu/tests: Clean up pdu_parse if-tree and restore test capability.
    make check

to build and run tests.

Cleanups were required to even begin attempting to fix #28.

--- a/Makefile.in
+++ b/Makefile.in
@@ -65,6 +65,10 @@ $(PROJS): $(chan_dongles_so_OBJS) Makefile
 .c.o: Makefile config.h
 	$(CC) $(CFLAGS) $(MAKE_DEPS) -o $@ -c $<
 
+check: tests
+	./test/test1
+	./test/parse
+
 tests: test/test1 test/parse
 
 test/test1: $(test1_OBJS)
