Improve asterisk/modules dir autodetection
Previously ./configure would continue after not finding DESTDIR for the
module and then fail at 'make install'. Now it requires you to set
DESTDIR if autodetection fails. Also added lib64 in the default paths to
try.

Reported-by: @alaa2003
Closes: #49

--- a/Makefile.in
+++ b/Makefile.in
@@ -52,7 +52,15 @@ all: @TARGET@
 
 install: all
 	$(STRIP) $(PROJM)
-	$(INSTALL) -m 755 $(PROJM) @DESTDIR@
+ifneq (@DESTDIR@,)
+	$(INSTALL) -m 644 $(PROJM) @DESTDIR@
+else
+	@echo >&2
+	@echo "*** Asterisk modules directory was not auto-detected." >&2
+	@echo "*** Please copy $(PROJM) to the appropriate modules directory yourself." >&2
+	@echo >&2
+	@false
+endif
 
 $(PROJM): $(chan_donglem_so_OBJS) Makefile
 	$(LD) $(LDFLAGS) $(SOLINK) -o $@ $(chan_donglem_so_OBJS) $(LIBS)
