--- a/configure.ac
+++ b/configure.ac
@@ -23,6 +23,13 @@ AC_ARG_WITH(
 	[ if test "x$with_asterisk" = "xyes" -o "x$with_asterisk" = "xno" ; then  AC_MSG_ERROR([Invalid --with-asterisk=path value]); fi ],
 	[ with_asterisk="../include /usr/include /usr/local/include /opt/local/include" ]
 )
+dnl  Set iconv headers patch
+AC_ARG_WITH(
+	[iconv],
+	AS_HELP_STRING([--with-iconv=path], [set iconv headers location]),
+	[ if test "x$with_iconv" = "xyes" -o "x$with_iconv" = "xno" ; then  AC_MSG_ERROR([Invalid --with-iconv=path value]); fi ],
+	[ with_iconv="../include /usr/include /usr/local/include /opt/local/include" ]
+)
 
 dnl  Required: asterisk version
 AC_ARG_WITH(
@@ -102,7 +109,7 @@ AC_DEFUN([AC_HEADER_FIND], [
 )
 
 AC_HEADER_FIND([asterisk.h], $with_asterisk)
-AC_HEADER_FIND([iconv.h], /usr/include /usr/local/include /opt/local/include)
+AC_HEADER_FIND([iconv.h], $with_iconv)
 
 AC_DEFINE([ICONV_CONST],[], [Define to const if you has iconv() const declaration of input buffer])
 AC_MSG_CHECKING([for iconv use const inbuf])
