travis: Alter asterisk include files remote path

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,16 +13,17 @@ env:
 # Extend build matrix
 matrix:
   include:
-    - env: ASTVER=15
-    - env: ASTVER=14
+    - env: ASTVER=16
+    #- env: ASTVER=15
+    #- env: ASTVER=14
     - env: ASTVER=13
-    - env: ASTVER=12
+    #- env: ASTVER=12
     - env: ASTVER=11
-    - env: ASTVER=10
+    #- env: ASTVER=10
     - env: ASTVER=1.8
 
 before_install:
-  - wget http://junk.devs.nu/asterisk-$ASTVER-include.tar.bz2
+  - wget http://junk.devs.nu/a/asterisk/asterisk-$ASTVER-include.tar.bz2
   - tar jxf asterisk-$ASTVER-include.tar.bz2
 
 before_script:
