Implemented concatenated SMS support

--- a/Makefile.in
+++ b/Makefile.in
@@ -3,25 +3,26 @@ PROJS =  chan_dongles.so
 
 chan_donglem_so_OBJS =  app.o at_command.o at_parse.o at_queue.o at_read.o at_response.o \
 	chan_dongle.o channel.o char_conv.o cli.o helpers.o manager.o \
-	memmem.o ringbuffer.o cpvt.o dc_config.o pdu.o mixbuffer.o pdiscovery.o
+	memmem.o ringbuffer.o cpvt.o dc_config.o pdu.o mixbuffer.o pdiscovery.o smsdb.o
 
 chan_dongles_so_OBJS = single.o
 
 test1_OBJS = test/test1.o ringbuffer.o mixbuffer.o
+gen_OBJS = test/gen.o char_conv.o pdu.o
 parse_OBJS = test/parse.o at_parse.o char_conv.o pdu.o
 discovery_OBJS = tools/discovery.o tools/tty.o
 
 SOURCES = app.c at_command.c at_parse.c at_queue.c at_read.c at_response.c \
 	chan_dongle.c channel.c char_conv.c cli.c cpvt.c dc_config.c helpers.c \
-	manager.c memmem.c ringbuffer.c single.c pdu.c mixbuffer.c pdiscovery.c
+	manager.c memmem.c ringbuffer.c single.c pdu.c mixbuffer.c pdiscovery.c smsdb.c
 
-test_SOURCES = test/test1.c test/parse.c
+test_SOURCES = test/test1.c test/parse.c test/gen.c
 tools_SOURCES = tools/discovery.c tools/tty.c
 
 HEADERS = app.h at_command.h at_parse.h at_queue.h at_read.h at_response.h \
 	chan_dongle.h channel.h char_conv.h cli.h cpvt.h dc_config.h export.h \
 	helpers.h manager.h memmem.h ringbuffer.h pdu.h mixbuffer.h pdiscovery.h \
-	mutils.h
+	mutils.h smsdb.h
 
 tools_HEADERS = tools/tty.h
 
@@ -38,7 +39,7 @@ INSTALL = @INSTALL@
 CHMOD = chmod
 
 # -DAST_MODULE=\"$(PROJM)\" -D_THREAD_SAFE
-CFLAGS  = @CFLAGS@ -I$(srcdir) -DAST_MODULE_SELF_SYM=__internal_chan_dongle_self \
+CFLAGS  = @CFLAGS@ -I$(srcdir) -std=gnu99 -DAST_MODULE_SELF_SYM=__internal_chan_dongle_self \
 	@CPPFLAGS@ @DEFS@ @AC_CFLAGS@
 LDFLAGS = @LDFLAGS@ 
 SOLINK  = @SOLINK@
@@ -76,11 +77,15 @@ $(PROJS): $(chan_dongles_so_OBJS) Makefile
 check: tests
 	./test/test1
 	./test/parse
+	./test/gen
 
-tests: test/test1 test/parse
+tests: test/test1 test/parse test/gen
 
 test/test1: $(test1_OBJS)
 	$(LD) $(LDFLAGS) -o $@ $(test1_OBJS) $(LIBS)
+
+test/gen: $(gen_OBJS)
+	$(LD) $(LDFLAGS) -o $@ $(gen_OBJS) $(LIBS)
 
 test/parse: $(parse_OBJS)
 	$(LD) $(LDFLAGS) -o $@ $(parse_OBJS) $(LIBS)
