--- a/etc/dongle.conf
+++ b/etc/dongle.conf
@@ -1,6 +1,8 @@
 [general]
 
 interval=15			; Number of seconds between trying to connect to devices
+smsdb=/var/lib/asterisk/smsdb
+csmsttl=600
 
 ;------------------------------ JITTER BUFFER CONFIGURATION --------------------------
 ;jbenable = yes			; Enables the use of a jitterbuffer on the receiving side of a
@@ -54,7 +56,6 @@ disablesms=no			; disable of SMS reading from device when received
 				;  default = no
 
 language=en			; set channel default language
-smsaspdu=yes			; if 'yes' send SMS in PDU mode, feature implementation incomplete and we strongly recommend say 'yes'
 mindtmfgap=45			; minimal interval from end of previews DTMF from begining of next in ms
 mindtmfduration=80		; minimal DTMF tone duration in ms
 mindtmfinterval=200		; minimal interval between ends of DTMF of same digits in ms
