--- a/configure.ac
+++ b/configure.ac
@@ -82,9 +82,9 @@ if test -z "$RM" ; then
 fi
 
 dnl Checks for libraries.
-dnl AC_CHECK_LIB([pthread], [pthread_create])
-dnl AC_CHECK_LIB([iconv], [iconv])
-AC_SEARCH_LIBS([iconv], [c iconv])
+dnl AC_CHECK_LIB([pthread], [pthread_create])  # should use ast_pthread_join everywhere?
+AC_SEARCH_LIBS([iconv], [c iconv],,AC_MSG_ERROR([iconv library missing]))
+AC_CHECK_LIB([sqlite3], [sqlite3_open],,AC_MSG_ERROR([sqlite3 library missing]))
 
 dnl Checks for header files.
 AC_CHECK_HEADERS([fcntl.h stdlib.h string.h sys/time.h termios.h])
@@ -110,6 +110,7 @@ AC_DEFUN([AC_HEADER_FIND], [
 
 AC_HEADER_FIND([asterisk.h], $with_asterisk)
 AC_HEADER_FIND([iconv.h], $with_iconv)
+AC_CHECK_HEADER([sqlite3.h],,AC_MSG_ERROR([sqlite3.h header file missing]))
 
 AC_DEFINE([ICONV_CONST],[], [Define to const if you has iconv() const declaration of input buffer])
 AC_MSG_CHECKING([for iconv use const inbuf])
