Don't do -Werror by default, use ./configure --enable-warnings-as-errors

--- a/.github/workflows/thanks-for-nothing-travis.yml
+++ b/.github/workflows/thanks-for-nothing-travis.yml
@@ -35,6 +35,7 @@ jobs:
           ./bootstrap &&
           ./configure --with-astversion=$ASTVER
               --with-asterisk=./asterisk-$ASTVER/include DESTDIR=/tmp
+              --enable-warnings-as-errors
 
       - name: Build for ${{ matrix.title }}
         run: make clean all
