--- a/config.h.in
+++ b/config.h.in
@@ -120,6 +120,18 @@
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
+/* printf format for time_t */
+#undef PRI_time_t
+
+/* The size of `int', as computed by sizeof. */
+#undef SIZEOF_INT
+
+/* The size of `long int', as computed by sizeof. */
+#undef SIZEOF_LONG_INT
+
+/* The size of `time_t', as computed by sizeof. */
+#undef SIZEOF_TIME_T
+
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
 
